tdf#90230 SwDoc::AppendDoc: take care of marks when inserting page break

SwDoc::AppendDoc() inserts nodes from an other document, and before
doing that, it inserts a page break at the end of the document. In case
there are marks at the end of the last paragraph, the insertion of the
page break moves them to the next page. This is a rare situation, but
happens e.g. when the source document is an empty one: then MM puts a
mark at the first paragraph of each inserted MM part, and then the first
paragraph == the last paragraph, so the mark of the only paragraph in
the document gets moved to the next page.

This is a problem on its own, but is detected by the SwIndexReg dtor
when that empty paragraph gets deleted later in SwNodes::Delete() called
by SwDoc::AppendDoc(), resulting in an assertion failure.

Triggered by commit a305a2c91420652db450b7f8edd140e1d69f42cf (use
bookmarks to mark mailmerge parts in a mailmerge document (fdo#80823),
2014-10-20), these not adjusted bookmarks were not detected before.

(cherry picked from commit 2819ee71da631116662401f14f8a0fb78c2a7f3a)

Conflicts:
	sw/qa/extras/mailmerge/mailmerge.cxx

Change-Id: I89775b477a2fd3182b2bc87144aed2bfe7912aff